test/sematest/invalid/use_variable_of_invalid_scope.java
class A {
  public static void main(String[] args) {
    int a = 4;
    if (true){
      int b = 5;
    }
    System.out.println(b);
  }
}